[package]
name = "hilo-live"
version = "0.1.0"
authors = ["tsudijon <timothysudijono@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix = "0.9.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-files = "0.2.1"

rand = "0.7"
bytes = "0.5.3"
byteorder = "1.1"
futures = "0.3.1"
env_logger = "0.7"
serde = "1.0"
serde_json = "1.0"

deckofcards = "0.4.0"